# console2lce

./: .gitignore  Console2Lce.csproj  Console2Lce.sln  Directory.Build.props  README.md
Console2Lce.Cli/: CliCommand.cs  CliCommandRouter.cs  CommandLineOptions.cs  CommandLineOptionsParser.cs  Console2Lce.Cli.csproj  ConvertCommandRunner.cs  DirectConvertCommandRunner.cs  ExtractCommandRunner.cs  InspectCommandRunner.cs  Program.cs
native/: CMakeLists.txt  NOTICE.md  build-native.ps1
native/src/: console2lce_lzx_native.c
src/Abstractions/: IMinecraft360ArchiveParser.cs  ISavegameDecompressor.cs  IStfsReader.cs
src/Errors/: ArchiveEntryOutOfBoundsException.cs  Console2LceException.cs  InvalidMinecraft360ArchiveHeaderException.cs  InvalidMinecraftXbox360RegionException.cs  InvalidXboxPackageMagicException.cs  SavegameDatDecompressionFailedException.cs  SavegameDatNotFoundException.cs
src/Models/: Minecraft360Archive.cs  Minecraft360ArchiveEntry.cs  Minecraft360ArchiveHeader.cs  MinecraftXbox360ChunkDecodeAttempt.cs  MinecraftXbox360ChunkDecodeReport.cs  MinecraftXbox360Region.cs  MinecraftXbox360RegionChunk.cs  SavegameDecodingResult.cs  SavegameEnvelopeCandidate.cs  SavegameInputData.cs  SavegameProbeAttempt.cs  SavegameProbeReport.cs  SavegameProbeResult.cs  StfsDirectoryEntry.cs  StfsExtractedFile.cs  StfsFileEntry.cs  StfsFileListingEntry.cs  StfsPackageMetadata.cs  StfsPackageType.cs
src/Services/: ArchiveArtifactWriter.cs  DebugArtifactLayout.cs  ExternalMinecraftToolkit.cs  IMinecraftXbox360ChunkExternalDecoder.cs  MccCompactNbtChunkPayloadParser.cs  (+22 more)
(+32 files in other folders)
